--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        <activity android:name=".CategoryListActivity" />
-        <activity android:name=".AddCard"></activity>
+        <activity android:name=".AddCard" />
+        <activity android:name=".CategoryListActivity"></activity>
     </application>
 
 </manifest>
