--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        <activity android:name=".AddCard" />
+        <activity android:name=".AddCardActivity" />
         <activity android:name=".CategoryListActivity"></activity>
     </application>
 
